--- a/multimidia.html
+++ b/multimidia.html
@@ -21,5 +21,4 @@ Atualizado em 01/Maio/2013
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+Copyright 2013 - by Gérbison Sabino
