--- a/multimidia.html
+++ b/multimidia.html
@@ -12,7 +12,7 @@ Menu Principal
 
 Glass > Multimídia
 Sons e Vídeos
-por Gustavo Guanabara
+por Gérbison Sabino
 Atualizado em 01/Maio/2013
 
 
@@ -21,4 +21,4 @@ Atualizado em 01/Maio/2013
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gérbison Sabino
+Copyright 2022 - by Gérbison Sabino
