--- a/fotos.html
+++ b/fotos.html
@@ -12,7 +12,7 @@ Menu Principal
 
 Glass > Fotos
 Galeria de Imagens do Google Glass
-por Gustavo Guanabara
+por Gérbison Sabino
 Atualizado em 01/Maio/2013
 
 Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
@@ -24,6 +24,6 @@ Veja na nossa galeria de fotos várias belas imagens que mostram algumas das pri
 - Vários tipos de lente
 - Informações importantes
 
-Copyright 2013 - by Gustavo Guanabara
+Copyright 2022 - by Gérbison Sabino
 
 Facebook | Twitter
