--- a/_textos/specs-txt.html
+++ b/_textos/specs-txt.html
@@ -12,12 +12,11 @@ Menu Principal
 
 Glass > Especificações
 Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+por Gérbison Sabino
 
 Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
 [AQUI ENTRA UMA IMAGEM]
 
-Copyright 2013 - by Gustavo Guanabara<
+Copyright 2022 - by Gérbison Sabino
 Facebook | Twitter
