--- a/_textos/multimidia-txt.html
+++ b/_textos/multimidia-txt.html
@@ -12,8 +12,7 @@ Menu Principal
 
 Glass > Multimídia
 Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+por Gérbison Sabino
 
 
 Áudio e Vídeo
@@ -21,5 +20,5 @@ Atualizado em 01/Maio/2013
 [AQUI ENTRA UM VÍDEO]
 [AQUI ENTRA UM ÁUDIO]
 
-Copyright 2013 - by Gustavo Guanabara
+Copyright 2022 - by Gérbison Sabino
 Facebook | Twitter
